Fixed used of JDK 9 Maps